src/objects/WES_Application_Request__c.object
<CustomObject>
    <description>WES version of Application Request as need ownership of records (existing Application Request has Master Detail to Opportunity).</description>
    <fields>
        <fullName>AccountHoldersName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name(s) of account holder(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <description>Enables users to process an Application more efficiently.</description>
        <formula>Account__r.BillingCity &amp;&quot;, &quot;&amp;
Account__r.BillingState &amp;&quot;, &quot;&amp;
Account__r.BillingStreet &amp;&quot;, &quot;&amp;
Account__r.BillingPostalCode &amp;&quot;, &quot;&amp;
Account__r.BillingCountry</formula>
        <inlineHelpText>All Account Billing Address fields in one place</inlineHelpText>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Email__c</fullName>
        <formula>Account__r.Account_Email_Address__c</formula>
        <label>Account Billing Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Frequency__c</fullName>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D01</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>W01</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>B01</fullName>
                    <label>Bi-Monthly</label>
                </value>
                <value>
                    <fullName>M31</fullName>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Billing_Plan__c</fullName>
        <label>Billing Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 day after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>1 day after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>5 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>5 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>15 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>15 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>16 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>16 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>30 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>30 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>31 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>31 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>45 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>45 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>46 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>46 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>62 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>62 days after invoice date - CHQ</fullName>
                </value>
                <value>
                    <fullName>60 days after invoice date - DD</fullName>
                </value>
                <value>
                    <fullName>60 days after invoice date - CHQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Class_of_Buyer__c</fullName>
        <label>Class of Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Credit_Plan__c</fullName>
        <label>Credit Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alert 80% - Late Fee 0% - Credit Autolock</fullName>
                </value>
                <value>
                    <fullName>No Alert - No Late Fee - No Autolock</fullName>
                </value>
                <value>
                    <fullName>Alert 80% - Late Fee 1.5% - Autolock</fullName>
                </value>
                <value>
                    <fullName>Alert 80% - Late Fee 2% - Autolock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - VIP/Government</fullName>
                </value>
                <value>
                    <fullName>1 - General Exclusion</fullName>
                </value>
                <value>
                    <fullName>3 - Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_ISO_Country_Code__c</fullName>
        <description>TEXT(Account__r.WES_ISO_Country_Code__c)</description>
        <formula>&quot;GB&quot;</formula>
        <label>Account ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Accounting/Business Services</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support Services</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defence</fullName>
                </value>
                <value>
                    <fullName>Agricultural &amp; Farm Machinery</fullName>
                </value>
                <value>
                    <fullName>Agricultural Products</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture,Forestry, Fishing (01-09)</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry and Fishing</fullName>
                </value>
                <value>
                    <fullName>Air Freight &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Airport Services</fullName>
                </value>
                <value>
                    <fullName>Alternative Carriers</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Apparel, Accessories &amp; Luxury Goods</fullName>
                </value>
                <value>
                    <fullName>Apparel Retail</fullName>
                </value>
                <value>
                    <fullName>Application Software</fullName>
                </value>
                <value>
                    <fullName>Arts and Recreation Services</fullName>
                </value>
                <value>
                    <fullName>Asset Management &amp; Custody Banks</fullName>
                </value>
                <value>
                    <fullName>Automobile Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Automotive Retail</fullName>
                </value>
                <value>
                    <fullName>Auto Parts &amp; Equipment</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Banking/Finance</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Brewers</fullName>
                </value>
                <value>
                    <fullName>Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Building Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Legacy_Id__c</fullName>
        <formula>Account__r.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mail_Indicator__c</fullName>
        <label>Mail Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier to Customer</fullName>
                </value>
                <value>
                    <fullName>Post to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Number_of_Employees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Employees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WES Application Requests (Account Parent Account)</relationshipLabel>
        <relationshipName>WES_Application_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Payment_Days__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                    <default>true</default>
                    <label>7</label>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Percent_Secured__c</fullName>
        <label>Percent Secured</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Secondary_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>WES business processes.
The related Account for this Application Request</description>
        <inlineHelpText>The related Account for this Application Request</inlineHelpText>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WES Application Requests</relationshipLabel>
        <relationshipName>WES_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adverse_Indicators__c</fullName>
        <label>Adverse Indicators</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCJ – unsatisfied</fullName>
                </value>
                <value>
                    <fullName>CCJ – satisfied</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>CVA</fullName>
                </value>
                <value>
                    <fullName>IVA</fullName>
                </value>
                <value>
                    <fullName>Strike off action</fullName>
                </value>
                <value>
                    <fullName>Overdue accounts / returns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_User_ID__c</fullName>
        <formula>IF(ISBLANK(Owner:User.IFCS_UserID__c),&quot;01&quot;,Owner:User.IFCS_UserID__c)</formula>
        <label>Agent User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnyoneelseneedtoAuthorizeDDMandate__c</fullName>
        <label>Anyone else need to Authorize DD Mandate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppContactsCompleted__c</fullName>
        <label># of App Contacts Completed</label>
        <summaryFilterItems>
            <field>WES_App_Contacts__c.RequiredInfo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_App_Contacts__c.WESApplicationRequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AppContacts__c</fullName>
        <label># App Contacts</label>
        <summaryForeignKey>WES_App_Contacts__c.WESApplicationRequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApplicationDetailsComplete__c</fullName>
        <formula>AND( 
NOT(ISBLANK(VelocityProfileName__c)),
MonthlyFuelVolumeLitres__c &gt; 0, 
ofVehicles__c &gt; 0, 
NOT(ISBLANK(TEXT(Account_Billing_Frequency__c))), 
NOT(ISBLANK(TEXT(Account_Payment_Days__c))), 
NOT(ISBLANK(Opportunity__r.Campaign.Name)), 
NOT(ISBLANK(Opportunity_Lead_Source__c)),
NOT(ISBLANK(Opportunity__r.WES_TypeofVehicles__c)) 
)</formula>
        <inlineHelpText>Requires the following info: Valid Velocity Profile name, Monthly Fuel Volume, Vehicle Type, # of Vehicles, Opp Campaign, Lead Source,</inlineHelpText>
        <label>Application Info Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Decline_Reason__c</fullName>
        <label>Application Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reject_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AML Failed</fullName>
                </value>
                <value>
                    <fullName>Adverse Info within the Fuel Card Industry</fullName>
                </value>
                <value>
                    <fullName>Adverse Info on Commercial Report</fullName>
                </value>
                <value>
                    <fullName>Adverse Info on Consumer Reportment decline</fullName>
                    <label>Adverse Info on Consumer Report</label>
                </value>
                <value>
                    <fullName>Applicant is Bankrupt</fullName>
                </value>
                <value>
                    <fullName>CCJ&apos;s against company or individual</fullName>
                </value>
                <value>
                    <fullName>Company has proposal to strike off / been dissolved</fullName>
                </value>
                <value>
                    <fullName>Director/s of companies in administration/liquidation/proposal to strike off etc.</fullName>
                </value>
                <value>
                    <fullName>Director/s or owner/partners not electoral register</fullName>
                </value>
                <value>
                    <fullName>Dormant Company</fullName>
                </value>
                <value>
                    <fullName>High Risk on Schufa</fullName>
                </value>
                <value>
                    <fullName>IVA against company or applicant</fullName>
                </value>
                <value>
                    <fullName>Late Payments (from Credit Reference Agency Report)</fullName>
                </value>
                <value>
                    <fullName>Legal Enforcements</fullName>
                </value>
                <value>
                    <fullName>Max Credit Limit within Group</fullName>
                </value>
                <value>
                    <fullName>NSSO&apos;s</fullName>
                </value>
                <value>
                    <fullName>New business, low social capital</fullName>
                </value>
                <value>
                    <fullName>New business, no directors listed</fullName>
                </value>
                <value>
                    <fullName>No Insurance Approved</fullName>
                </value>
                <value>
                    <fullName>Overdue Accounts/Returns</fullName>
                </value>
                <value>
                    <fullName>Poor Accounts</fullName>
                </value>
                <value>
                    <fullName>Previous/Recent payment problems within group</fullName>
                </value>
                <value>
                    <fullName>Previously with Legal Department</fullName>
                </value>
                <value>
                    <fullName>Recent Gazette listing on company filing history</fullName>
                </value>
                <value>
                    <fullName>Recently declined within group</fullName>
                </value>
                <value>
                    <fullName>Adverse Info from internet</fullName>
                </value>
                <value>
                    <fullName>Applicant not willing to pay by DD</fullName>
                </value>
                <value>
                    <fullName>Awaiting Photo ID</fullName>
                </value>
                <value>
                    <fullName>Awaiting correct bank details</fullName>
                </value>
                <value>
                    <fullName>Awaiting customer/sales to confirm details on application i.e. card embossing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Final_Date__c</fullName>
        <description>update this field when application reach to cancelled,declined,fulfilled</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Limited Assessment</fullName>
                </value>
                <value>
                    <fullName>2 - Very Low</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
                <value>
                    <fullName>4 - Medium</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
                <value>
                    <fullName>6 - Very High</fullName>
                </value>
                <value>
                    <fullName>9 - Under Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status_Team__c</fullName>
        <description>Determines whether the Application belongs to Sales or Credit based on the Application Status.</description>
        <formula>CASE(TEXT(Application_Status__c),
&quot;Draft&quot;, &quot;Sales&quot;,
&quot;Awaiting Security Check&quot;, &quot;Sales&quot;,
&quot;Awaiting Assignment&quot;, &quot;Credit&quot;,
&quot;Awaiting Credit Check&quot;, &quot;Credit&quot;,
&quot;Being Credit Checked&quot;, &quot;Credit&quot;,
&quot;Awaiting Further Information&quot;, &quot;Credit&quot;,
&quot;Sales to Obtain Further Information&quot;, &quot;Sales&quot;,
&quot;Returned from Sales&quot;, &quot;Credit&quot;,
&quot;Higher Authority&quot;, &quot;Credit&quot;,
&quot;Returned to Analyst&quot;, &quot;Credit&quot;,
	NULL)</formula>
        <label>Application Status Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Awaiting Security Check</fullName>
                </value>
                <value>
                    <fullName>Awaiting Assignment</fullName>
                </value>
                <value>
                    <fullName>Awaiting Credit Check</fullName>
                </value>
                <value>
                    <fullName>Being Credit Checked</fullName>
                </value>
                <value>
                    <fullName>Awaiting Further Information</fullName>
                </value>
                <value>
                    <fullName>Sales to Obtain Further Information</fullName>
                </value>
                <value>
                    <fullName>Returned from Sales</fullName>
                </value>
                <value>
                    <fullName>Higher Authority</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Unable to Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lite</fullName>
                    <default>true</default>
                    <label>Lite</label>
                </value>
                <value>
                    <fullName>Short</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF</fullName>
                    <default>true</default>
                    <label>SF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_decision_date__c</fullName>
        <description>Date to which application status is updated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Application decision date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes about this approval</inlineHelpText>
        <label>Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>WES business processes</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved 1st</fullName>
                </value>
                <value>
                    <fullName>Approved 2nd</fullName>
                </value>
                <value>
                    <fullName>Approval 3rd</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AreyouPrimaryContact__c</fullName>
        <label>Are you Primary Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assess_End_Time__c</fullName>
        <description>Status changed from Credit Assessment to any other status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assess End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assess_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assess Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AuthorizedSetupDirectDebit__c</fullName>
        <label>Authorized to set up Direct Debit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoAssignQueue__c</fullName>
        <description>Used to assign to queue for Round Robin</description>
        <label>Auto-Assign Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WES Credit (auto-assign)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankAccountNumValidity__c</fullName>
        <formula>IF(ISBLANK(bankAccountNumber__c), NULL,
IF(NOT(ISBLANK(bankAccountNumber__c)) &amp;&amp; mod(
IF(
VALUE(MID(bankAccountNumber__c,1,1))*2 &gt; 9, 
MOD(VALUE(MID(bankAccountNumber__c,1,1))*2,10) + 1,
VALUE(MID(bankAccountNumber__c,1,1))*2
) +
VALUE(MID(bankAccountNumber__c,2,1)) +
IF(
VALUE(MID(bankAccountNumber__c,3,1))*2 &gt; 9,
MOD(VALUE(MID(bankAccountNumber__c,3,1))*2,10) + 1,
VALUE(MID(bankAccountNumber__c,3,1))*2
) +
VALUE(MID(bankAccountNumber__c,4,1)) +
IF(
VALUE(MID(bankAccountNumber__c,5,1))*2 &gt; 9,
MOD(VALUE(MID(bankAccountNumber__c,5,1))*2,10)+1,
VALUE(MID(bankAccountNumber__c,5,1))*2
) +
VALUE(MID(bankAccountNumber__c,6,1)) +
IF(
VALUE(MID(bankAccountNumber__c,7,1))*2 &gt; 9,
MOD(VALUE(MID(bankAccountNumber__c,7,1))*2,10)+1,
VALUE(MID(bankAccountNumber__c,7,1))*2
) +
VALUE(MID(bankAccountNumber__c,8,1)),10)
= 0,&quot;Valid&quot;,&quot;Invalid&quot;))</formula>
        <label>Bank Account # Validity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankManagerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BespokeSetupRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bespoke Setup Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BiggestVehicle__c</fullName>
        <label>Biggest Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Vehicles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Entity_Type__c</fullName>
        <description>Returns IFC Business Type ID based on company</description>
        <formula>TEXT(Account__r.WES_Business_Entity_Type__c)</formula>
        <label>Business Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardsWithDiffVelProfiles__c</fullName>
        <inlineHelpText>Total number of Fuel Cards with different velocity profiles than the default or overide on the application.</inlineHelpText>
        <label># of Cards with different Vel Profiles</label>
        <summarizedField>WES_Fuel_Card_Pack__c.CardsWithDiffVelProfiles__c</summarizedField>
        <summaryForeignKey>WES_Fuel_Card_Pack__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>This field is used to control the picklist values for Sales Area-Administration and Sales Area-Marketing.</description>
        <label>Client Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ExxonMobil Saipan</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Guam</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Singapore</fullName>
                </value>
                <value>
                    <fullName>ExxonMobil Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Companies_House_Check__c</fullName>
        <label>Companies House Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Companies_House_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Companies House Match</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>